# embaiml

./: README.md  pyproject.toml
Day002/codes/euler_uart_py/: euler_uart_read.py  imu_data_log.csv
Day002/codes/imu_euler_SDcard/: imu_euler_SDcard.ino
Day002/codes/imu_quat_SDcard/: imu_quat_SDcard.ino
Day002/codes/mic_rec_SDcard/: mic_rec_SDcard.ino
Day002/codes/python_codes/: detect_gimbal_locks.py  fix_gimbal_locks.py  real_fix_gimbal_locks.py
Day002/codes/quant_uart_py/: quant_uart_py.ino  quant_uart_read.py
Day003/: readme.md
Day004/codes/: imu_uart_py.ino  imu_uart_py.py
Day005/codes/: euler_uart_file_py.py  euler_uart_py.ino  euler_uart_read.py  quat_uart_file_py.py
Day005/materials/: TelloDrone&AI.docx
Day006/codes/: euler_uart_read.py  inspect_scaler.py  m5imu_HGB_classifier_Q.py  m5imu_HGB_inference.py  m5imu_MLP_NN_classifier_Q.py  m5imu_MLP_NN_default_classifier_Q.py  m5imu_MLP_NN_default_inference_Q.py  m5imu_MLP_NN_inference_Q.py  m5imu_decisiontree_classifier_Q.py  m5imu_ensemble_classification_Q.py  m5imu_ensemble_inference_Q.py  m5imu_randomforest_classifier_Q.py  m5imu_randomforest_inference_Q.py  quant_uart_py.ino  quant_uart_read.py
Day007/codes/codes/: myfilter.py
Day008/codes/: M5Core2_CapTouch_MQTT.ino  M5Core2_Random_MQTT.ino
Day009/codes/: readme.md
Day009/codes/projects/: CNN_imu_classification.py  CNN_live_inference.py  DNN_imu_classification.py  LSTM_imu_classification.py  audio_LSTM_classifier.py  audio_cnn_classifier.py  har_utils.py  prepare_data.py  quant_uart_py.ino  quant_uart_read.py
Practice03/: message.txt
Practice04/: Slide_1_Single_Board_Computer_Overview.pptx  Slide_2_Overview_of_the_Kit_Components.pptx  command_list.txt
