[project]
name = "embaiml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "scipy>=1.17.0",
    "numpy==2.4.0",
]

[project.optional-dependencies]
win = [
    "jupyterlab>=4.5.3",
]
rpi = [
    "mpu6050-raspberrypi",
    "smbus>=1.1.post2",
]
