[project]
name = "embaiml"
version = "0.1.0"
description = "UNLV 2026"
readme = "README.md"
requires-python = ">=3.11,!=3.12.*,<3.14"
dependencies = [
    "pyserial>=3.5",
    "scipy>=1.17.0",
    "numpy>=2.0.0,<2.4.2; platform_system == 'Linux' and platform_machine == 'armv7l'",
    "numpy>=2.0.0; platform_system != 'Linux' or platform_machine != 'armv7l'",
    "jupyterlab>=4.5.3; platform_system != 'Linux' or platform_machine != 'armv7l'",
    "mpu6050-raspberrypi; platform_system == 'Linux' and platform_machine == 'armv7l'",
    "smbus>=1.1.post2; platform_system == 'Linux' and platform_machine == 'armv7l'",
    "matplotlib>=3.10.8; platform_system != 'Linux' or platform_machine != 'armv7l'",
    "librosa; platform_system != 'Linux' or platform_machine != 'armv7l'",
    "numba>0.54.0; platform_system != 'Linux' or platform_machine != 'armv7l'",
    "llvmlite; platform_system != 'Linux' or platform_machine != 'armv7l'",
    "bmi160-i2c>=0.6; platform_system == 'Linux' and platform_machine == 'armv7l'"
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
